--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,9 @@
 @import 'blocks/button';
 @import 'blocks/adventages';
 @import 'blocks/media';
+@import 'blocks/titles';
+@import 'blocks/consultation';
+@import 'blocks/forms';
 
 
 
