--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -10,6 +10,10 @@
 	border: none;
 	border-radius: 5px;
 
+	&:hover {
+		box-shadow: 3px 3px 20px #fff;
+	}
+
 	&_main {
 		width: 303px;
 		height: 54px;
@@ -17,8 +21,33 @@
 		font-size: 16px;
 		margin-top: 65px;
 	}
-	&_submit{
+
+	&_submit {
 		width: 100%;
 		height: 58px;
+
+		&:hover {
+			box-shadow: 3px 3px 20px $main-color;
+		}
+	}
+
+	&_mini {
+		width: 135px;
+		height: 44px;
+
+		&:hover {
+			box-shadow: 3px 3px 20px $main-color;
+		}
+	}
+
+	&_form {
+		font-weight: 500;
+		font-size: 16px;
+		height: 58px;
+		width: 100%;
+
+		&:hover {
+			box-shadow: 3px 3px 20px $main-color;
+		}
 	}
 }
