--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -4,18 +4,35 @@
 	width: 303px;
 	margin-top: 38px;
 
+	.form__control {
+		margin-bottom: 15px;
+	}
 	input {
 		font-weight: 300;
 		font-size: 14px;
 		color: #4B4B4B;
 		height: 50px;
 		padding: 0 20px;
-		margin-bottom: 15px;
 		border-radius: 5px;
 		border: none;
+		width: 100%;
 
 		&:nth-child(3) {
 			margin-bottom: 20px;
 		}
+	}
+
+	&__mt25 {
+		margin-top: 25px;
+	}
+
+	.invalid {
+		border-radius: 5px;
+		box-shadow: 3px 3px 20px $main-color;
+	}
+
+	.valid {
+		box-shadow: 3px 3px 20px green;
+		border-radius: 5px;
 	}
 }
