--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -48,10 +48,12 @@
 	}
 
 	&__link {
+		margin-top: 10px;
 		font-weight: 500;
 		font-size: 16px;
 		color: #FFFFFF;
 		line-height: 30px;
+
 		a{
 			color:#FFFFFF;
 			text-decoration: underline;
