--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,6 +4,7 @@
 	font-family: 'Museo Sans', 'sans serif';
 }
 .container{
+	position: relative;
 	width: 942px;
 	margin: 0 auto;
 }
@@ -12,10 +13,15 @@
 @import 'blocks/header';
 @import 'blocks/button';
 @import 'blocks/adventages';
-@import 'blocks/media';
 @import 'blocks/titles';
 @import 'blocks/consultation';
 @import 'blocks/forms';
+@import 'blocks/carousel';
+@import 'blocks/catalog';
+@import 'blocks/reviews';
+@import 'blocks/footer';
+@import 'blocks/overley';
+@import 'blocks/media';
 
 
 
