--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,6 +21,7 @@
 @import 'blocks/reviews';
 @import 'blocks/footer';
 @import 'blocks/overley';
+@import 'blocks/pageup';
 @import 'blocks/media';
 
 
